# ncurses-test

./: .gitignore  CMakeLists.txt  main.cc
